--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,11 @@
 body {
     background-color: #D8EFD3;
     box-sizing: border-box;
-    height: 100%;
+    height: 100vh;
+}
+
+header{
+    height: 10vh;
 }
 
 .logo{
@@ -22,7 +26,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 55px;
-    height: 88vh;
+    height: 85vh;
 }
 .contenido__entrada{
     display: flex;
@@ -34,7 +38,7 @@ body {
 }
 #contenido__entrada__input{
     width: 70%;
-    height: 60%;
+    height: 100%;
     resize: none;
     outline: none;
     margin-top: 15%;
@@ -90,7 +94,6 @@ body {
     border-radius: 32px;
     background-color: #FFFF;
     padding: 2.5%;
-    /* position: relative; */
 }
 
 #contenido__salida__imagen{
